# Townspark_Backend

./: README.md  db.sqlite3  impl.md  pyproject.toml  pytest.ini  setup.sh
accounts/: README.md  admin.py  models.py  serializers.py  tests.py  update.md  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_profile_image.py  0003_alter_user_profile_image.py  0004_alter_user_phone_number.py  0005_add_is_admin_and_date_joined.py
comment/: admin.py  models.py  serializers.py  urls.py  views.py
comment/migrations/: 0001_initial.py
core/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/utils/: response_models.py
issue/: README.md  admin.py  impl.md  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
issue/migrations/: 0001_initial.py  0002_issue_category.py  0003_issue_likes_count_issueimage.py
issues/: __init__.py  admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
issues/migrations/: 0001_initial.py
main_app/: settings.py  urls.py
notifications/: __init__.py  admin.py  models.py  serializers.py  views.py
notifications/migrations/: 0001_initial.py
profile/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
profile/migrations/: __init__.py
progress/: README.md  __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
progress/migrations/: 0001_initial.py  __init__.py
z_readmes/: Townspark_API.postman_collection.json
(+1 files in other folders)
